# piculet

./: .coveragerc  .gitignore  .hgignore  .python-version  .travis.yml  CHANGES.md  CHANGES.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  piculet.py  piculet.pyi  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  woody.py  woody.pyi
docs/: Makefile  api.rst  cli.rst  conf.py  extract.rst  index.rst  low-level.rst  matrix.html  overview.rst  postprocess.rst  preprocess.rst  shining.html  spec.rst  usage.rst
docs/_static/: custom.css
docs/modules/: cli.rst  web.rst  wood.rst  woody.rst
docs/source/: conf.py  extract.rst  index.rst  low-level.rst  overview.rst  preprocess.rst
examples/: imdb.json  movie.json  movie.yaml  shining.html  wikipedia.json
tests/: conftest.py  movie_json_spec.json  movie_xml_spec.json  ruff.toml  shining.html  shining.json  test_cli.py  test_extract.py  test_html.py  test_imdb.py  test_piculet.py  test_piculet_rules.py  test_preprocess.py  test_reducers.py  test_scrape.py  test_transformers.py  test_tree.py  test_web.py  test_wood.py  test_woody.py  test_xpath.py
tests/files/: iso8859-9_charset_iso8859-1.html  iso8859-9_charset_iso8859-9.html  iso8859-9_charset_none.html  iso8859-9_charset_utf-8.html  iso8859-9_content-type_iso8859-1.html  iso8859-9_content-type_iso8859-9.html  iso8859-9_content-type_utf-8.html  utf-8_charset_iso8859-9.html  utf-8_charset_none.html  utf-8_charset_utf-8.html  utf-8_content-type_iso8859-9.html  utf-8_content-type_utf-8.html
woody/: __init__.py  __init__.pyi  cli.py  cli.pyi  web.py  web.pyi  wood.py  wood.pyi
