[project]
name = "piculet"
version = "2.0b1"
description = "XML/HTML scraper using XPath queries."
readme = "README.rst"

authors = [
    {name = "H. Turgut Uyar", email = "uyar@tekir.org"},
]
license = "LGPL-3.0-or-later"
license-files = ["LICENSE.txt"]

keywords = [
    "html",
    "xml",
    "json",
    "xpath",
    "jmespath",
    "scrape",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities",
]

requires-python = "~=3.10"
dependencies = [
    "typedload~=2.39",
    "lxml~=5.4.0",
    "jmespath~=1.0.1",
]

[dependency-groups]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
typing = [
    "mypy>=1.18.2",
    "lxml-stubs>=0.5.1",
    "types-jmespath>=1.0.2.20250809",
]
style = [
    "ruff>=0.14.5",
]
doc = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
dev = [
    {include-group = "test"},
    {include-group = "typing"},
    {include-group = "style"},
    {include-group = "doc"},
    "tox-uv>=1.29.0",
]

[project.urls]
homepage = "https://tekir.org/piculet/"
documentation = "https://piculet.readthedocs.io/"
repository = "https://github.com/uyar/piculet"

[tool.setuptools]
py-modules = ["piculet"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["piculet"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["A", "E", "F", "I", "T", "W"]
ignore = ["E731"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{10,11,12,13,14}, pypy3{10,11}, types, style, docs
isolated_build = True

[testenv]
runner = uv-venv-lock-runner
package = wheel
wheel_build_env = .pkg
commands =
    pytest

[testenv:coverage]
commands =
    pytest --cov

[testenv:types]
commands =
    mypy piculet.py tests

[testenv:style]
commands =
    ruff check --preview piculet.py tests

[testenv:docs]
changedir = docs
commands =
    sphinx-build -b html . _build
"""

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
