[project]
name = "piculet"
version = "2.1"
description = "XML/HTML scraper using XPath queries."
readme = "README.md"

authors = [
    {name = "H. Turgut Uyar", email = "uyar@tekir.org"},
]
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]

keywords = [
    "html",
    "xml",
    "json",
    "xpath",
    "jmespath",
    "scrape",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities",
]

requires-python = ">=3.11"
dependencies = [
    "lxml~=5.4",
    "jmespath~=1.1",
    "typedload~=2.40",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
typing = [
    "mypy>=2.1.0",
    "lxml-stubs>=0.5.1",
    "types-jmespath>=1.1.0.20260508",
]
style = [
    "ruff>=0.15.12",
]
doc = [
    "sphinx>=8.2.3",
]
dev = [
    {include-group = "test"},
    {include-group = "typing"},
    {include-group = "style"},
    {include-group = "doc"},
    "tox-uv>=1.35.2",
]

[project.urls]
homepage = "https://tekir.org/piculet/"
documentation = "https://piculet.readthedocs.io/"
repository = "https://github.com/uyar/piculet"

[tool.setuptools]
py-modules = ["piculet"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["piculet"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["A", "E", "F", "I", "T", "W"]
ignore = ["E731"]
preview = true

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{11,12,13,14}, pypy3{11}, types, style, docs
isolated_build = True

[testenv]
runner = uv-venv-lock-runner
package = wheel
wheel_build_env = .pkg
commands =
    pytest

[testenv:coverage]
commands =
    pytest --cov

[testenv:types]
commands =
    mypy piculet.py tests

[testenv:style]
commands =
    ruff check piculet.py tests

[testenv:docs]
changedir = docs
commands =
    sphinx-build -b html . _build
"""

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
